[project]
name = "oss-health-check-data"
version = "0.1.0"
description = "Data pipeline and analytics for OSS GitHub health checking"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "requests>=2.32.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "pyarrow>=19.0.1",
    "scipy>=1.15.2",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "xgboost>=2.1.4",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9,<3.11",
    "seaborn>=0.13.2",
    "plotly>=6.0.1",
    "tqdm>=4.67.1",
    "joblib>=1.4.2",
    "pyyaml>=6.0.2",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
eda = [
    "missingno>=0.5.2",
    "ydata-profiling>=4.16.1",
]